# orca-compressor

./: .clang-tidy  .clangd  .gitignore  convantion.md  meson.build  readme.md
src/: buffered-stream.c  buffered-stream.h  decoder.c  decoder.h  encoder.c  encoder.h  errors.c  errors.h  file.h  file_win.c  huffman.c  huffman.h  main.c  meson.build  ownership.h  pqueue.c  pqueue.h  serializer.c  serializer.h  utils.c  utils.h
src/platform/: app.manifast
test/: meson.build  test_buffered-stream.cpp  test_encoder-decoder.cpp  test_errors.cpp
